@@ -1,3 +1,9 @@
+2006-04-18  Nick Clifton  <nickc@redhat.com>
+
+	PR 2257
+	* elfcode.h (elf_object_p): Allow files with corrupt e_shstrndx
+	fields to still be handled as ELF files.
+
 2006-04-16  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* po/SRC-POTFILES.in: Regenerated.
